[gd_scene load_steps=4 format=2]

[ext_resource path="res://Dots/Dot.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 13.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[node name="Dot" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
disabled = true

[node name="DotName" type="RichTextLabel" parent="."]
visible = false
margin_left = 8.0
margin_top = -24.0
margin_right = 136.0
margin_bottom = 16.0
text = "Dot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 2 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="mouse_entered" from="Area2D2" to="." method="_on_Area2D2_mouse_entered"]
[connection signal="mouse_exited" from="Area2D2" to="." method="_on_Area2D2_mouse_exited"]
